# stockfish

./: CMakeLists.txt
src/: CMakeLists.txt  board.cpp  main.cpp
